# transclusion

./: .gitignore  LICENSE  README.md  _include.py  blocks_to_dictionaries.py  dictionaries_to_filters.py  ensure_balanced_delimiters.py  ensure_balanced_parentheses.py  execute.py  execute_filters.py  filters.py  isolate_blocks.py  main.py  main1.py  main2.py  mkdocs.yml  parse_delimiters.py  parse_parentheses.py  process_chunks.py  pyproject.toml  reconstruct.py  render.py  state_dictionary.py  transclude.py  validate_chunks.py
docs/: blocks_to_dictionaries.md  dictionaries_to_filters.md  dictionaries_to_operations.md  ensure_balanced_parentheses.md  execute.md  execute_filters.md  execute_operations.md  filters.md  include.md  index.md  operation.md  parse_parentheses.md  process_chunks.md  reassemble_document.md  reconstruct.md  state_dictionary.md  transclude.md  transclude_base.md  validate_chunks.md
prompts/: directive.md  execute_phase_one.md  execute_phase_two.md  index1.md  isolate_blocks.md  parse_delimiters.md  split.md  syncspec.md  transclude.md
specs/: dictionaries_to_directives.md  ensure_balanced_delimiters.md  execute_phase_one.md  index1.md  syncspec1.md
tests/: test_blocks_to_dictionaries.py  test_dictionaries_to_directives.py  test_dictionaries_to_filters.py  test_dictionaries_to_operations.py  test_ensure_balanced_delimiters.py  test_ensure_balanced_parentheses.py  test_execute.py  test_execute_filters.py  test_execute_operations.py  test_execute_phase_one.py  test_execute_phase_two.py  test_filters.py  test_include.py  test_isolate_blocks.py  (+9 more)
(+51 files in other folders)
