[project]
name = "transclusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
test = ["pytest>=9.0.2"]
docs = ["mkdocs>=1.6.1", "mkdocs-material>=9.7.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transclusion"]